Replace Java 11 APIs.